# mpc_path_tracker_ros

./: CMakeLists.txt  README.md  package.xml
mpc_path_tracker/include/: mpc_path_tracker.h
mpc_path_tracker/launch/: mpc_path_tracking.launch
mpc_path_tracker/params/: mpc_path_tracker_ros_params.yaml
mpc_path_tracker/src/: mpc_path_tracker_node.cpp
path_saved/: utils.py
plan2control_msgs/: CMakeLists.txt  package.xml
plan2control_msgs/msg/: PathSpeed.msg
src/: mpc_path_tracker.cpp  mpc_path_tracker_node.cpp
